stylist login done

--- a/FrontEnd/src/component/CSS/freelancerProfile.css
+++ b/FrontEnd/src/component/CSS/freelancerProfile.css
@@ -8,7 +8,7 @@
 .userBio{
     font: 200;
     font-family: 'Times New Roman', Times, serif;
-    color: #F7882F
+    color: #f7ce3e
 }
 .row:after {
     content: "";
