--- a/FrontEnd/src/component/CSS/search.css
+++ b/FrontEnd/src/component/CSS/search.css
@@ -6,9 +6,9 @@
     padding-right: 25px;
     padding-bottom: 10px;
     padding-left: 25px;
-    color: #F7882F
+    color: #f7ce3e  
 }
 .design{
     padding-top: 150px;
-    background: #F7882F;
+    background: #f7ce3e ;
 }
